create style.css and add ways to style text

--- a/foundations/01-css-methods/index.html
+++ b/foundations/01-css-methods/index.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="styles.css" />
     <style> 
       p {
-        color: green;
+        color: white;
+        background-color: green;
       }
     </style>
     <title>Methods for Adding CSS</title>
@@ -15,6 +16,6 @@
   <body>
     <div>Style me via the external method!</div>
     <p>I would like to be styled with the internal method, please.</p>
-    <button style="color: orange;">Inline Method</button>
+    <button style="color: black; background-color: orange;">Inline Method</button>
   </body>
 </html>
